* Updated the mass upload area. Updated YUI Uploader to v2.8.x, moved their Uploader JS to local so as to fix a bug in SWFObject + Opera (maybe other browsers). Reworked layout for cooler file lists. (Aeva-Gallery2.php, uploader.swf, up.js, up.css) ! Fixed regression where sub-files added to the main CSS file list weren't correctly cached. (Subs-Cache.php) * Done some extra work to make the Media template a bit more validator-friendly. (Media.template.php) * Pathetic urge to save even more bytes in zoomedia... Now 658 bytes after compression. (zoomedia.js) * Error log was ugly. Me no like ugly things. Me like beer and women. In that order. (admin.css) ! Context menus could be followed up by a misaligned element. (index.css)

--- a/Themes/default/styles/admin.css
+++ b/Themes/default/styles/admin.css
@@ -460,8 +460,8 @@ ul.moderation_notes
 #error_log
 	width: 100%
 	td
-		padding: 8px
-		line-height: 160%
+		padding: 4px 8px
+		line-height: 150%
 		img
 			vertical-align: middle
 	td.half_width
